Bug 497463 - The site settings are not applied when going Backward and Forward in history
Summary: The site settings are not applied when going Backward and Forward in history
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-14 14:52 UTC by Juraj
Modified: 2024-12-14 21:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2024-12-14 14:52:15 UTC
SUMMARY
The site settings are not applied

STEPS TO REPRODUCE
1. Go to site A (eg ForceDarkMode = Allow)
2. Go to site B (eg ForceDarkMode = Deny)
3. Return to site A

OBSERVED RESULT
Site settings are not applied

EXPECTED RESULT
Site settings are applied
Comment 1 Juraj 2024-12-14 20:53:03 UTC
During a closer look, it happens only when returning back to SpeedDial page on which the url is empty.
Comment 2 Bug Janitor Service 2024-12-14 21:12:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/102
Comment 3 Juraj 2024-12-14 21:24:20 UTC
Git commit 2b4755f136b7c2c1da0886b13cfddb0d6be6febd by Juraj Oravec.
Committed on 14/12/2024 at 21:10.
Pushed by jurajo into branch 'master'.

Add missing default SiteSettings for intenal pages

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +6    -0    src/lib/webengine/webpage.cpp

https://invent.kde.org/network/falkon/-/commit/2b4755f136b7c2c1da0886b13cfddb0d6be6febd