Add missing default SiteSettings for intenal pages

BUG: 497463

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>